<resources>
    <string name="app_name">Restyledonate</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_catalogo">Catálogo</string>
    <string name="title_mensajes">Mensajes</string>


    <string name="menu_atencion">Atención al Cliente</string>
    <string name="menu_donaciones">Mis Donaciones</string>
    <string name="menu_educacion">Aprende Sobre Sostenibilidad</string>

    <string-array name="opciones_articulo">
        <item>Seleccione una opción</item>
        <item>Donación</item>
        <item>Re-venta</item>
    </string-array>
    <string name="title_activity_dialog_solicitar">dialog_solicitar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>